--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel ./html/index.html",
+    "dev": "parcel ./html/reservation.html",
+    "ticket": "parcel ./html/ticket.html"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,8 @@
   "dependencies": {
     "axios": "^0.26.1",
     "parcel": "^2.3.2"
+  },
+  "devDependencies": {
+    "process": "^0.11.10"
   }
 }
